--- a/miniprogram/pages/mine/personal/personal.wxml
+++ b/miniprogram/pages/mine/personal/personal.wxml
@@ -18,7 +18,7 @@
       <text class="itemName">地址</text>
       <text class="itemContent">{{address}}</text>
     </view>
-    <button bindtap="toRevisability">修改个人信息</button>
+    <button class="toRevisability" bindtap="toRevisability">修改个人信息</button>
   </view>
   <view class="revisability" wx:else>
     <form>
@@ -34,11 +34,11 @@
         <text class="itemName">用户名</text>
         <input class="itemContent" model:value="{{userName}}" maxlength="6"></input>
       </view>
-      <view class="address">
+      <view class="address" bindtap="setAdress">
         <text class="itemName">地址</text>
         <textarea class="itemContent" model:value="{{address}}" maxlength="60"></textarea>
       </view>
-      <button bindtap="toReadOnly">保存</button>
+      <button class="toReadOnly" bindtap="toReadOnly">保存</button>
     </form>
   </view>
 </view>
