--- a/miniprogram/pages/mine/mine.wxml
+++ b/miniprogram/pages/mine/mine.wxml
@@ -6,8 +6,8 @@
     <view class="infoUserName">{{userName}}</view>
   </view>
   <view class="function">
-    <navigator class="personal" url="./personal">个人信息</navigator>
-    <navigator class="order" url="./order">领养单</navigator>
+    <navigator class="personal" url="./personal/personal">个人信息</navigator>
+    <navigator class="order" url="./order/order">领养单</navigator>
     <navigator class="postList">已发布</navigator>
   </view>
 </view>
