--- a/miniprogram/pages/mine/personal/addressList/addressList.wxss
+++ b/miniprogram/pages/mine/personal/addressList/addressList.wxss
@@ -40,7 +40,7 @@
   line-height: 90rpx;
   text-align: center;
   color: rgba(54, 51, 51, 0.685);
-  border-left: 1px solid rgba(54, 51, 51, 0.603);
+  border-left: 2rpx solid rgba(54, 51, 51, 0.603);
 }
 button {
   background: #f4ea2a;
