--- a/miniprogram/pages/mine/personal/userName/userName.wxss
+++ b/miniprogram/pages/mine/personal/userName/userName.wxss
@@ -8,9 +8,9 @@
 input {
   height: 62rpx;
   width: 85%;
-  margin: 10px auto;
+  margin: 20rpx auto;
   padding: 0 30rpx;
   background: rgba(0, 0, 0, 0.048);
-  border-radius: 100px;
+  border-radius: 200rpx;
   font-size: 32rpx;
 }
