--- a/miniprogram/custom-tab-bar/index.wxss
+++ b/miniprogram/custom-tab-bar/index.wxss
@@ -3,13 +3,13 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 70px;
-  background: white;
+  height: 140rpx;
+  background: #fff;
   display: flex;
   padding-bottom: env(safe-area-inset-bottom);
-  box-shadow:0 0 15px 0.8px rgba(0, 0, 0, 0.5);
-  border-top-left-radius:40px;
-  border-top-right-radius:40px;
+  box-shadow:0 0 30rpx 1.6rpx rgba(0, 0, 0, 0.5);
+  border-top-left-radius:80rpx;
+  border-top-right-radius:80rpx;
 }
 
 .tab-bar-item {
@@ -27,5 +27,5 @@
 }
 
 .tab-bar-item cover-view {
-  font-size: 12px;
+  font-size: 24rpx;
 }
