--- a/miniprogram/pages/classify/classify.wxss
+++ b/miniprogram/pages/classify/classify.wxss
@@ -1,13 +1,13 @@
 /* pages/classify/classify.wxss */
 .perch {
-  height: 80px;
+  height: 160rpx;
   width: 100%;
 }
 .topBar {
   height: 100rpx;
   width: 70%;
   display: flex;
-  margin: 0 auto 30px auto;
+  margin: 0 auto 60rpx auto;
   line-height: 100rpx;
 }
 .topBar view {
@@ -22,7 +22,7 @@
   font-weight: 600;
 }
 .content {
-  height: 200px;
+  height: 400rpx;
 }
 .list {
   width: 100%;
@@ -33,9 +33,9 @@
 .listMessage {
   width: 310rpx;
   padding: 2.5%;
-  margin-bottom: 5px;
-  font-size: 14px;
-  box-shadow: 0 0 10px 0.5px rgba(0, 0, 0, 0.5);
+  margin-bottom: 10rpx;
+  font-size: 28rpx;
+  box-shadow: 0 0 20rpx 1rpx rgba(0, 0, 0, 0.5);
 }
 .listMessage image {
   width: 310rpx;
