详情页完善 愿望单

--- a/miniprogram/pages/details/details.wxml
+++ b/miniprogram/pages/details/details.wxml
@@ -26,4 +26,9 @@
     <view class="itemName">交接方式</view>
     <view class="itemContent">{{way}}</view>
   </view>
+  <view class="button">
+    <view class="addWish">添加到愿望单</view>
+    <view class="adopt">确认领养</view>
+  </view>
+  <view class="perch"></view>
 </view>
