--- a/miniprogram/pages/new/new.wxml
+++ b/miniprogram/pages/new/new.wxml
@@ -4,16 +4,24 @@
     <view class="title">发表新内容</view>
     <input type="text" value="{{title}}" bindinput="titleInput" placeholder="请输入标题"/>
     <textarea value="{{text}}" bindinput="textInput" placeholder="请输入内容"></textarea>
-    <radio-group class="classify">
+    <radio-group class="classify" bindchange="classifyToString">
       <text>分类</text>
-      <radio>流浪动物</radio>
-      <radio>宠物寄养</radio>
-      <radio>宠物转赠</radio>
+      <label wx:for="{{classifychoices}}" wx:key="key">
+        <radio value="{{item.name}}">{{item.name}}</radio>
+      </label>
+      
+      <!-- <radio>宠物寄养</radio>
+      <radio>宠物转赠</radio> -->
     </radio-group>
-    <radio-group class="way">
+    <radio-group class="way" bindchange="wayToString" >
+      
       <text>交接方式</text>
-      <radio>快递</radio>
-      <radio>自提</radio>
+      <label wx:for="{{waychoices}}" wx:key="key" >
+        <radio value="{{item.name}}">{{item.name}}</radio>
+      </label>
+      
+      <!-- <radio>快递</radio>
+      <radio>自提</radio> -->
     </radio-group>
     <view class="imgList">
       <view class="imgItem" wx:for="{{imgList}}" wx:key="index">
@@ -23,7 +31,7 @@
       <image class="uploading" src="/images/icon/uploadImg.png" mode="widthFix"></image>
     </view>
     </view>
-    <button>发布</button>
+    <button bindtap="submit">发布</button>
   </form>
   <view class="perch"></view>
 </view>
