--- a/miniprogram/pages/classify/classify.wxml
+++ b/miniprogram/pages/classify/classify.wxml
@@ -5,14 +5,14 @@
     <view id="petFostering" class="{{currentTab == 1 ? 'tab-active':''}}" bindtap="switchTopTab">宠物寄养</view>
     <view id="petTransfer" class="{{currentTab == 2 ? 'tab-active':''}}" bindtap="switchTopTab">宠物转养</view>
   </view>
-  <view class="content" wx:if="{{currentTab == 0}}">111想写一段鸡汤放在这或者放别的</view>
-  <view class="content" wx:if="{{currentTab == 1}}">222想写一段鸡汤放在这或者放别的</view>
-  <view class="content" wx:if="{{currentTab == 2}}">333想写一段鸡汤放在这或者放别的</view>
-  <view class="list">
-    <view class="listMessage" wx:for="{{postList}}" wx:key="index" bindtap="itemClick">
-      <image src="{{item.image}}" mode="widthFix"></image>
-      <text>{{item.title}}</text>
-    </view>
+  <view class="content" wx:if="{{currentTab == 0}}">
+    <msg-list msgList="{{msgList}}"></msg-list>
+  </view>
+  <view class="content" wx:if="{{currentTab == 1}}">
+    <msg-list msgList="{{msgList}}"></msg-list>
+  </view>
+  <view class="content" wx:if="{{currentTab == 2}}">
+    <msg-list msgList="{{msgList}}"></msg-list>
   </view>
   <view class="perch"></view>
 </view>
