--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -16,7 +16,7 @@
   box-shadow:0 0 20rpx 1rpx rgba(0, 0, 0, 0.5);
   position: absolute;
   z-index: 1;
-  top: 25%;
+  top: 300rpx;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -29,7 +29,7 @@
   text-shadow: 0 0 20rpx 1rpx rgba(0, 0, 0, 0.5);
   position: absolute;
   z-index: 1;
-  top: 40%;
+  top: 455rpx;
   left: 50%;
   transform: translate(-50%, -50%);
 }
