--- a/miniprogram/pages/msgDetails/msgDetails.wxss
+++ b/miniprogram/pages/msgDetails/msgDetails.wxss
@@ -1,4 +1,4 @@
-/* pages/details/details.wxss */
+/* pages/msgDetails/msgDetails.wxss */
 .pageTitle {
   text-align: center;
   color: rgb(97, 94, 94);
