--- a/miniprogram/pages/createOrder/createOrder.wxss
+++ b/miniprogram/pages/createOrder/createOrder.wxss
@@ -2,14 +2,26 @@
 page {
   background: rgba(126, 122, 122, 0.11);
 }
+.clearfix:before, .clearfix:after{
+  content: "";
+  display: table;
+  clear: both;
+}
+.clearfix{
+  zoom: 1;
+}
 .background {
   width: 750rpx;
+  height: 500rpx;
+  overflow: hidden;
+  position: relative;
 }
 .topBar {
   width: 90%;
-  margin: -470rpx auto 0 auto;
-  position: relative;
-  z-index: 1;
+  position: absolute;
+  z-index: 2;
+  top: 90rpx;
+  left: 60rpx;
 }
 .icon {
   float: left;
@@ -29,10 +41,11 @@ page {
 .info {
   width: 660rpx;
   height: 280rpx;
-  margin: 190rpx auto;
   background: #fff;
-  position: relative;
-  z-index: 1;
+  position: absolute;
+  z-index: 9;
+  top: 450rpx;
+  left: 45rpx;
   border-radius: 25rpx;
   box-shadow:0 0 30rpx 10rpx rgba(0, 0, 0, 0.5);
 }
@@ -52,7 +65,98 @@ page {
 }
 .telNumber {
   float: right;
+  font-size: 32rpx;
 }
 .address {
   margin-top: 70rpx;
+  font-size: 32rpx;
+}
+.msg {
+  width: 100%;
+  height: 440rpx;
+  background: #fff;
+  position: absolute;
+  top: 610rpx;
+}
+.msgContent {
+  margin-top: 200rpx;
+}
+.cover {
+  width: 180rpx;
+  height: 180rpx;
+  overflow: hidden;
+  float: left;
+  margin-left: 70rpx;
+  border-radius: 6rpx;
+}
+.cover image{
+  width: 180rpx;
+}
+.msgTitle {
+  width: 420rpx;
+  height: 84rpx;
+  float: left;
+  margin: 20rpx 50rpx 0 30rpx;
+  word-break: break-all;
+  white-space: normal;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.currentLocation {
+  float: left;
+  font-size: 28rpx;
+  color: rgb(97, 94, 94);
+  margin: 15rpx 5px 10px 15px; 
+}
+.classify, .way{
+  font-size: 32rpx;
+  position: absolute;
+  z-index: 1;
+  top: 1070rpx;
+  width: 100%;
+  height: 100rpx;
+  background: #fff;
+  line-height: 100rpx;
+  padding-left: 70rpx;
+}
+.classify image,.way image {
+  width: 50rpx;
+  position: relative;
+  top: 15rpx;
+  margin: 0 15rpx;
+}
+.way {
+  top: 1190rpx;
+}
+.itemName {
+  color:rgb(97, 94, 94);
+}
+.button {
+  position: absolute;
+  top: 1310rpx;
+  width: 730rpx;
+  height: 140rpx;
+  padding-right: 20rpx;
+  background: #fff;
+}
+.button view {
+  font-size: 32rpx;
+  width: 200rpx;
+  height: 80rpx;
+  float: right;
+  margin: 30rpx 15rpx;
+  line-height: 80rpx;
+  text-align: center;
+  border-radius: 50rpx;
+}
+.cancel {
+  color: rgb(97, 94, 94);
+  border: 2rpx solid rgb(97, 94, 94);
+}
+.confirm {
+  color: #fff;
+  background: #ECBC28;
 }
