--- a/miniprogram/pages/wish/wish.wxml
+++ b/miniprogram/pages/wish/wish.wxml
@@ -10,7 +10,7 @@
         <view class="msgTitle">{{item.msgTitle}}</view>
         <view class="classify">{{item.classify}}</view>
         <view class="way">{{item.way}}</view>
-        <view class="button">确认领养</view>
+        <view class="button" bindtap="toCreateOrder">确认领养</view>
       </view>
       <view class="delete" bindtap="delete" data-index="index">
         <image src="/images/icon/delete.png" mode="widthFix"></image>
