搜索栏，首页，new
搜索栏，首页，new

--- a/miniprogram/pages/index/search/search.wxml
+++ b/miniprogram/pages/index/search/search.wxml
@@ -1,8 +1,8 @@
 <!--pages/index/search/search.wxml-->
 <view id="search">
   <view class="title">搜索</view>
-  <view class="search" bindtap="toSearch">
+  <view class="search" >
     <image mode="widthFix" src="/images/icon/search.png"></image>
-    <input type="text" focus confirm-type="search" model:value="{{content}}" />
+    <input bindinput="toSearch" type="text" focus confirm-type="search" model:value="{{content}}" />
   </view>
 </view>
