--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,4 +1,4 @@
-#index {
+page {
   position: relative;
 }
 .perch {
@@ -72,8 +72,6 @@
   display: flex;
   line-height: 100rpx;
   text-align: center;
-}
-.listTitle view {
   font-size: 32rpx;
 }
 .listTitle image {
@@ -85,15 +83,4 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-}
-.listMessage {
-  width: 310rpx;
-  padding: 2.5%;
-  margin-bottom: 10rpx;
-  font-size: 28rpx;
-  box-shadow: 0 0 20rpx 1rpx rgba(0, 0, 0, 0.5);
-}
-.listMessage image {
-  width: 310rpx;
-  overflow: hidden;
 }
