--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -44,6 +44,7 @@
   border-top-left-radius:80rpx;
   border-top-right-radius:80rpx;
   padding-top: 10%;
+  font-size: 32rpx;
 } 
 .function view {
   padding:5%;
