--- a/miniprogram/pages/mine/order/order.wxml
+++ b/miniprogram/pages/mine/order/order.wxml
@@ -3,7 +3,7 @@
   <view class="title">领养单</view>
   <view class="topBar">
     <view id="created" class="{{currentTab == 0 ? 'tab-active':''}}" bindtap="switchTopTab">已创建</view>
-    <view id="delivered" class="{{currentTab == 1 ? 'tab-active':''}}" bindtap="switchTopTab">已</view>
+    <view id="delivered" class="{{currentTab == 1 ? 'tab-active':''}}" bindtap="switchTopTab">已送出</view>
     <view id="finished" class="{{currentTab == 2 ? 'tab-active':''}}" bindtap="switchTopTab">已完成</view>
   </view>
   <view class="content" wx:if="{{currentTab == 0}}">
