首页返回顶部 发布新动态 七七八八

--- a/miniprogram/components/orderList/orderList.wxss
+++ b/miniprogram/components/orderList/orderList.wxss
@@ -24,7 +24,7 @@
 }
 .orderId::before {
   content:"";
-  background: #f4ea2a;
+  background: #ECBC28;
   width: 16rpx;
   height: 40rpx;
   position: absolute;
