--- a/miniprogram/pages/mine/order/order.wxss
+++ b/miniprogram/pages/mine/order/order.wxss
@@ -3,13 +3,16 @@ page {
   background: rgba(126, 122, 122, 0.11);
 }
 .title {
+  width: 100%;
+  height: 100rpx;
   text-align: center;
+  line-height: 100rpx;
   color: rgb(97, 94, 94);
   background: #fff;
-  padding: 20rpx;
   font-size: 34rpx;
-  position: relative;
-  z-index: 1;
+  position: fixed;
+  z-index: 999;
+  border-bottom: 2rpx solid rgba(97, 94, 94, 0.137);
 }
 .topBar {
   height: 100rpx;
@@ -24,7 +27,7 @@ page {
   color: rgba(0, 0, 0, 0.7);
 }
 .tab-active {
-  border-bottom: 10rpx solid #f4ea2a;
+  border-bottom: 10rpx solid #ECBC28;
   border-radius: 10rpx;
   color: #000!important;
   font-weight: 600;
