--- a/miniprogram/pages/classify/classify.wxss
+++ b/miniprogram/pages/classify/classify.wxss
@@ -18,7 +18,7 @@
   padding: 10rpx 0;
 }
 .tab-active {
-  background: #f4ea2a;
+  background: #ECBC28;
   color: #fff;
   font-weight: 600;
   border-radius: 20rpx;
