--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,48 +1,49 @@
 <view id="index">
-  <scroll-view scroll-y="true">
-    <view class="topbar">
-      <image class="logo" src="/images/icon/logo.jpg" mode="widthFix"></image>
-      <view class="search" bindtap="toSearch">
-        <image mode="widthFix" src="/images/icon/search.png"></image>
-        <view>搜索你想要的内容</view>
-      </view>
+  <view class="topbar">
+    <image class="logo" src="/images/icon/logo.jpg" mode="widthFix"></image>
+    <view class="search" bindtap="toSearch">
+      <image mode="widthFix" src="/images/icon/search.png"></image>
+      <view>搜索你想要的内容</view>
     </view>
-    <view class="indexSwiper">
-      <swiper circular autoplay indicator-dots indicator-active-color="#F4EA2A" interval="3000" previous-margin="30rpx"
-        next-margin="30rpx">
-        <swiper-item>
-          <image src="/images/index/1.jpeg" mode="widthFix"></image>
-        </swiper-item>
-        <swiper-item>
-          <image src="/images/index/2.jpg" mode="widthFix"></image>
-        </swiper-item>
-        <swiper-item>
-          <image src="/images/index/3.jpg" mode="widthFix"></image>
-        </swiper-item>
-      </swiper>
+  </view>
+  <view class="indexSwiper">
+    <swiper circular autoplay indicator-dots indicator-active-color="#ECBC28" interval="3000" previous-margin="30rpx"
+      next-margin="30rpx">
+      <swiper-item>
+        <image src="/images/index/swiper1.png" mode="widthFix"></image>
+      </swiper-item>
+      <swiper-item>
+        <image src="/images/index/swiper2.png" mode="widthFix"></image>
+      </swiper-item>
+      <swiper-item>
+        <image src="/images/index/swiper3.png" mode="widthFix"></image>
+      </swiper-item>
+    </swiper>
+  </view>
+  <view class="classify">
+    <view class="strayAnimal" bindtap="tostrayAnimal">
+      <image src="/images/index/strayAnimal.png" mode="widthFix"></image>
+      <text>流浪宠物</text>
     </view>
-    <view class="classify">
-      <view class="strayAnimal" bindtap="tostrayAnimal">
-        <image src="/images/index/strayAnimal.png" mode="widthFix"></image>
-        <text>流浪宠物</text>
-      </view>
-      <view class="petFostering" bindtap="toPetFostering">
-        <image src="/images/index/petFostering.png" mode="widthFix"></image>
-        <text>宠物寄养</text>
-      </view>
-      <view class="petTransfer" bindtap="toPetTransfer">
-        <image src="/images/index/PetTransfer.png" mode="widthFix"></image>
-        <text>宠物领养</text>
-      </view>
+    <view class="petFostering" bindtap="toPetFostering">
+      <image src="/images/index/petFostering.png" mode="widthFix"></image>
+      <text>宠物寄养</text>
     </view>
-    <view class="indexList">
-      <view class="listTitle">
-        <image src="/images/index/title1.png" mode="widthFix"></image>
-        <view>最新发布</view>
-        <image src="/images/index/title2.png" mode="widthFix"></image>
-      </view>
-      <msg-list msgList="{{msgList}}"></msg-list>
+    <view class="petTransfer" bindtap="toPetTransfer">
+      <image src="/images/index/PetTransfer.png" mode="widthFix"></image>
+      <text>宠物领养</text>
     </view>
-  </scroll-view>
+  </view>
+  <view class="indexList" bindscroll="scroll">
+    <view class="listTitle">
+      <image src="/images/index/title1.png" mode="widthFix"></image>
+      <view>最新发布</view>
+      <image src="/images/index/title2.png" mode="widthFix"></image>
+    </view>
+    <msg-list msgList="{{msgList}}"></msg-list>
+  </view>
+  <view class="toTop" bindtap="toTop">
+    <image src="/images/icon/toTop.svg" mode="widthFix" />
+  </view>
   <view class="perch"></view>
 </view>
