--- a/miniprogram/pages/mine/personal/addressList/addressList.wxss
+++ b/miniprogram/pages/mine/personal/addressList/addressList.wxss
@@ -1,13 +1,19 @@
 /* pages/mine/personal/address/address.wxss */
-#addressList {
-  width: 90%;
-  margin: 0 auto;
-}
 .title {
+  width: 100%;
+  height: 100rpx;
   text-align: center;
+  line-height: 100rpx;
   color: rgb(97, 94, 94);
-  margin: 20rpx;
+  background: #fff;
   font-size: 34rpx;
+  position: fixed;
+  z-index: 999;
+  border-bottom: 2rpx solid rgba(97, 94, 94, 0.137);
+}
+.list {
+  width: 90%;
+  margin: 120rpx auto 0 auto;
 }
 .item {
   width: 100%;
@@ -43,6 +49,6 @@
   border-left: 2rpx solid rgba(54, 51, 51, 0.603);
 }
 button {
-  background: #f4ea2a;
+  background: #ECBC28;
   color:#fff;
 }
