--- a/miniprogram/pages/msgDetails/msgDetails.wxml
+++ b/miniprogram/pages/msgDetails/msgDetails.wxml
@@ -2,7 +2,7 @@
 <view id="msgDetails">
   <view class="pageTitle">宠物详情</view>
   <view class="datailsSwiper">
-    <swiper circular autoplay indicator-dots indicator-active-color="#F4EA2A" interval="3000">
+    <swiper circular autoplay indicator-dots indicator-active-color="#ECBC28" interval="3000">
       <swiper-item wx:for="{{imgList}}" wx:key="index">
         <image src="{{item}}" mode="widthFix" bindtap="previewImg" data-index="{{index}}"></image>
       </swiper-item>
