--- a/miniprogram/pages/orderDetails/orderDetails.wxss
+++ b/miniprogram/pages/orderDetails/orderDetails.wxss
@@ -1,10 +1,15 @@
 /* pages/orderDetails/orderDetails.wxss */
 .title {
+  width: 100%;
+  height: 100rpx;
   text-align: center;
+  line-height: 100rpx;
   color: rgb(97, 94, 94);
-  margin: 20rpx;
+  background: #fff;
   font-size: 34rpx;
-  
+  position: fixed;
+  z-index: 999;
+  border-bottom: 2rpx solid rgba(97, 94, 94, 0.137);
 }
 .topBar {
   height: 150rpx;
